--- a/app/src/main/res/layout/activity_word2_.xml
+++ b/app/src/main/res/layout/activity_word2_.xml
@@ -6,16 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.waifuproject.Word2_Activity">
 
-    <ScrollView
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="344dp"
         android:layout_height="495dp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp"
-        tools:ignore="MissingConstraints">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+        tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
